--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -84,7 +84,7 @@
     }
     .xui-RecommendedDetailPage .xui-time .xui-time-wrap{
     	color: #9e9e9e;
-    	font-size: 14px;
+    	font-size: 13px;
     	float: right;
     }
     .xui-timeChoose{
@@ -227,8 +227,8 @@
 			var endDate = '{{endDate}}'.replaceAll('/','-');
 			var last_index_e = endDate.lastIndexOf('-');
 			endDate = endDate.substring(0,last_index_e) + ' ' + startDate.substring(last_index_e + 1,16);
-			$('#startDate').text(startDate);
-			$('#endDate').text(endDate);
+			$('#startDate').val(startDate);
+			$('#endDate').val(endDate);
 		})
 
 		$(".xa-submit").click(function(){
