--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -300,7 +300,10 @@
             var scrollT = document.body.scrollTop || document.documentElement.scrollTop;//兼容处理
             var offsetHeight = document.documentElement.offsetHeight;
             var clientHeight = document.documentElement.clientHeight;
-            if(scrollT+clientHeight >= offsetHeight){
+            console.log(scrollT);
+            console.log(offsetHeight);
+            console.log(clientHeight);
+            if(scrollT+clientHeight+50 >= offsetHeight){
                 showProductDetails();
             }
         });
