--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -223,20 +223,14 @@
 			$(".xa-timeChoose").show();
 			console.log('{{startDate}}',77777);
 			console.log('{{endDate}}',6666666);
-			if ('{{startDate}}'.length() && '{{endDate}}'.length()){
-				var startDate = '{{startDate}}'.replaceAll('/','-');
-				console.log(startDate,1111);
-				var last_index_s = startDate.lastIndexOf('-');
-				startDate = startDate.substring(0,last_index_s) + ' ' + startDate.substring(last_index_s + 1,16);
-				var endDate = '{{endDate}}'.replaceAll('/','-');
-				console.log(endDate,2222);
-				var last_index_e = endDate.lastIndexOf('-');
-				endDate = endDate.substring(0,last_index_e) + ' ' + startDate.substring(last_index_e + 1,16);
-				console.log(startDate,33333);
-				console.log(endDate,44444);
-				$('#startDate').val(startDate);
-				$('#endDate').val(endDate);
+			var startDate = '{{startDate}}';
+			var endDate = '{{endDate}}';
+			if (startDate.length() && endDate.length()){
+				startDate = startDate.substring(0,10);
+				endDate = endDate.substring(0,10);
 			}
+			$('#startDate').val(startDate);
+			$('#endDate').val(endDate);
 		})
 
 		$(".xa-submit").click(function(){
@@ -260,15 +254,15 @@
 			theme: 'android-ics light', //皮肤样式
 			display: 'modal', //显示方式 
 			mode: 'scroller', //日期选择模式
-			dateFormat: 'yyyy-mm-dd',
+			dateFormat: 'yyyy/mm/dd',
 			lang: 'zh',
 			showNow: true,
 			nowText: "今天",
 			startYear: currYear - 100, //开始年份
 			endYear: currYear + 100 //结束年份
 		};
-		$("#startDate").mobiscroll($.extend(opt['datetime'], opt['default']));
-		$("#endDate").mobiscroll($.extend(opt['datetime'], opt['default']));
+		$("#startDate").mobiscroll($.extend(opt['date'], opt['default']));
+		$("#endDate").mobiscroll($.extend(opt['date'], opt['default']));
 	});
 </script>
 {% endblock %}
