--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -254,7 +254,7 @@
 			theme: 'android-ics light', //皮肤样式
 			display: 'modal', //显示方式 
 			mode: 'scroller', //日期选择模式
-			dateFormat: 'yyyy/mm/dd',
+			dateFormat: 'yyyy-mm-dd',
 			lang: 'zh',
 			showNow: true,
 			nowText: "今天",
