--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -180,8 +180,8 @@
 </div>
 
 <div class="xui-timeChoose xa-timeChoose">
-	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="xui-time-input"/></div>
-	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="xui-time-input"/></div>
+	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="xui-time-input" value="{{startDate}}"/></div>
+	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="xui-time-input" value="{{endDate}}"/></div>
 	<div class="xui-btn-wrap">
 		<a href="javascript:void(0);" class="xui-reset xa-reset">清除时间</a>
 		<a href="javascript:void(0);" class="xui-submit xa-submit">确定</a>
@@ -221,16 +221,6 @@
 		$(".xa-choose").click(function(){
 			$(".xa-RecommendedDetailPage").hide();
 			$(".xa-timeChoose").show();
-			console.log('{{startDate}}',77777);
-			console.log('{{endDate}}',6666666);
-			var startDate = '{{startDate}}';
-			var endDate = '{{endDate}}';
-			if (startDate.length() && endDate.length()){
-				startDate = startDate.substring(0,10);
-				endDate = endDate.substring(0,10);
-			}
-			$('#startDate').val(startDate);
-			$('#endDate').val(endDate);
 		})
 
 		$(".xa-submit").click(function(){
