--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -236,74 +236,16 @@
         //展示商品详情
         var detail_content = $('.wui-i-product-description');
         $('.wui-i-body').append($(detail_content));
-        //返回角度
-        function GetSlideAngle(dx, dy) {
-          return Math.atan2(dy, dx) * 180 / Math.PI;
-        }
 
-        //根据起点和终点返回方向 1：向上，2：向下，3：向左，4：向右,0：未滑动
-        function GetSlideDirection(startX, startY, endX, endY) {
-          var dy = startY - endY;
-          var dx = endX - startX;
-          var result = 0;
-
-          //如果滑动距离太短
-          if(Math.abs(dx) < 2 && Math.abs(dy) < 2) {
-              return result;
-          }
-
-          var angle = GetSlideAngle(dx, dy);
-          if(angle >= -45 && angle < 45) {
-              result = 4;
-          }else if (angle >= 45 && angle < 135) {
-              result = 1;
-          }else if (angle >= -135 && angle < -45) {
-              result = 2;
-          }
-          else if ((angle >= 135 && angle <= 180) || (angle >= -180 && angle < -135)) {
-              result = 3;
-          }
-
-          return result;
-        }
-
-        //滑动处理
-        var startX, startY;
-        document.addEventListener('touchstart',function (ev) {
-          startX = ev.touches[0].pageX;
-          startY = ev.touches[0].pageY;
-        }, false);
+        //下拉到底显示商品详情
         document.addEventListener('touchend',function (ev) {
-          var endX, endY;
-          endX = ev.changedTouches[0].pageX;
-          endY = ev.changedTouches[0].pageY;
-          var direction = GetSlideDirection(startX, startY, endX, endY);
-          switch(direction) {
-              case 0:
-                  break;
-              case 1:
-                  if (product_id!=''){
-                      showProductDetails();
-                    }
-                  break;
-              case 2:
-                  break;
-              case 3:
-                  break;
-              case 4:
-                  break;
-              default:
-          }
-        }, false);
-        //解决安卓下拉到底无法显示的问题
-        document.addEventListener('touchend',function (ev) {
-            var scrollT = document.body.scrollTop || document.documentElement.scrollTop;//兼容处理
-            var offsetHeight = document.documentElement.offsetHeight;
-            var clientHeight = document.documentElement.clientHeight;
-            console.log(scrollT);
-            console.log(offsetHeight);
-            console.log(clientHeight);
-            if(scrollT+clientHeight+50 >= offsetHeight){
+            var $win = $(window);
+            var $top = $('.wui-i-product-description');
+            var rect = $top[0].getBoundingClientRect();
+            var djage = function(){
+                return rect.top<0 || rect.top >= 0 && ($win.height()-rect.top>=0);
+            };
+            if(rect && djage()){
                 showProductDetails();
             }
         });
