--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -86,6 +86,8 @@
     	color: #9e9e9e;
     	font-size: 1rem;
     	float: right;
+    	display: inline-block;
+    	line-height: 50px;
     }
     .xui-timeChoose{
     	display: none;
@@ -94,7 +96,7 @@
     	margin: 10px 0;
     	padding: 15px 20px;
     	background: #fff;
-    	font-size: 1.5rem;
+    	font-size: 1.4rem;
     }
     .xui-end-time{
     	margin-bottom: 15px;
@@ -141,9 +143,12 @@
     .xui-time-input{
     	border: none;
 		width: 50%;
+		font-size: 1.4rem;
     }
     .xui-filter-time{
     	font-weight: bold;
+    	display: inline-block;
+    	line-height: 50px;
     }
 </style>
 {% endblock %}
@@ -151,7 +156,7 @@
 <div class="xui-RecommendedDetailPage xa-RecommendedDetailPage">
 	<div class="xui-time xa-time">
 		<span class="xui-filter-time">筛选时间</span>
-		<span class="xui-time-wrap">
+		<span class="xui-time-wrap xa-time-wrap">
 		 	<span class="xui-time-content">
 		 		{% if startDate and endDate %}
 		 			<span>{{startDate}}</span>
@@ -160,8 +165,8 @@
 	 			{% else %}
 		 			全部
 	 			{% endif %}
+	 			<span class="xa-choose xui-choose">&gt;</span>
  			</span>
-			<span class="xa-choose xui-choose">&gt;</span>
 		</span>
 	</div>
 	<div class="xui-general">
@@ -189,8 +194,8 @@
 	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="xui-time-input" value="{{startDate}}"/></div>
 	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="xui-time-input" value="{{endDate}}"/></div>
 	<div class="xui-btn-wrap">
-		<a href="javascript:void(0);" class="xui-reset xa-reset">清除时间</a>
-		<a href="javascript:void(0);" class="xui-submit xa-submit">确定</a>
+		<button class="xui-reset xa-reset">清除时间</button>
+		<button class="xui-submit xa-submit">确定</button>
 	</div>
 </div>
 
@@ -224,7 +229,7 @@
 			}
 		}
 
-		$(".xa-choose").click(function(){
+		$(".xa-time-wrap").click(function(){
 			$(".xa-RecommendedDetailPage").hide();
 			$(".xa-timeChoose").show();
 		})
