--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -88,6 +88,7 @@
     	float: right;
     	display: inline-block;
     	line-height: 50px;
+    	margin-right: 6%;
     }
     .xui-timeChoose{
     	display: none;
@@ -115,14 +116,14 @@
     	padding: 10px 0;
     	box-sizing: border-box;
     }
-    .xui-btn-wrap a.xui-reset{
+    .xui-btn-wrap .xui-reset{
     	background: #fff;
     	text-decoration: none;
     	color: #000;
     	border:1px solid #dcdcdc;
     	float: left;
     }
-    .xui-btn-wrap a.xui-submit{
+    .xui-btn-wrap .xui-submit{
     	background: #0480cf;
     	text-decoration: none;
     	color: #000;
@@ -132,12 +133,10 @@
     }
     .xui-choose{
     	display: inline-block;
-    	text-decoration: none;
     	color: #9e9e9e;
     	font-family: "黑体";
     	margin-right: 10px;
-    	font-size: 18px;
-    	vertical-align: bottom;
+    	font-size: 1rem;
     	font-weight: 700;
     }
     .xui-time-input{
@@ -194,8 +193,8 @@
 	<div class="xui-start-time">开始时间：<input type="text" name="startDate" id="startDate" readonly class="xui-time-input" value="{{startDate}}"/></div>
 	<div class="xui-end-time">结束时间：<input type="text" name="endDate" id="endDate" readonly class="xui-time-input" value="{{endDate}}"/></div>
 	<div class="xui-btn-wrap">
-		<button class="xui-reset xa-reset">清除时间</button>
-		<button class="xui-submit xa-submit">确定</button>
+		<span class="xui-reset xa-reset">清除时间</span>
+		<span class="xui-submit xa-submit">确定</span>
 	</div>
 </div>
 
