--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -109,23 +109,22 @@
     	padding: 0 15px;
     	overflow: hidden;
     }
-    .xui-btn-wrap a{
+    .xui-btn-wrap span{
     	display: inline-block;
     	width: 47%;
     	text-align:center;
     	padding: 10px 0;
     	box-sizing: border-box;
+    	font-size: 1.5rem
     }
     .xui-btn-wrap .xui-reset{
     	background: #fff;
-    	text-decoration: none;
     	color: #000;
     	border:1px solid #dcdcdc;
     	float: left;
     }
     .xui-btn-wrap .xui-submit{
     	background: #0480cf;
-    	text-decoration: none;
     	color: #000;
     	border:1px solid #dcdcdc;
     	color: #fff;
@@ -135,7 +134,6 @@
     	display: inline-block;
     	color: #9e9e9e;
     	font-family: "黑体";
-    	margin-right: 10px;
     	font-size: 1rem;
     	font-weight: 700;
     }
