--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -88,7 +88,7 @@
     	float: right;
     	display: inline-block;
     	line-height: 50px;
-    	margin-right: 3%;
+    	width: 70%;
     }
     .xui-timeChoose{
     	display: none;
@@ -103,7 +103,7 @@
     	margin-bottom: 15px;
     	padding: 15px 20px;
     	background: #fff;  
-    	font-size: 1.5rem; 
+    	font-size: 1.3rem; 
     }
     .xui-btn-wrap{
     	padding: 0 15px;
