--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -89,6 +89,7 @@
     	display: inline-block;
     	line-height: 50px;
     	width: 70%;
+    	text-align: right;
     }
     .xui-timeChoose{
     	display: none;
@@ -97,13 +98,13 @@
     	margin: 10px 0;
     	padding: 15px 20px;
     	background: #fff;
-    	font-size: 1.3rem;
+    	font-size: 1rem;
     }
     .xui-end-time{
     	margin-bottom: 15px;
     	padding: 15px 20px;
     	background: #fff;  
-    	font-size: 1.3rem; 
+    	font-size: 1rem; 
     }
     .xui-btn-wrap{
     	padding: 0 15px;
@@ -115,7 +116,7 @@
     	text-align:center;
     	padding: 10px 0;
     	box-sizing: border-box;
-    	font-size: 1.5rem
+    	font-size: 1.2rem
     }
     .xui-btn-wrap .xui-reset{
     	background: #fff;
@@ -140,7 +141,7 @@
     .xui-time-input{
     	border: none;
 		width: 50%;
-		font-size: 1.3rem;
+		font-size: 1rem;
     }
     .xui-filter-time{
     	font-weight: bold;
