--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -90,6 +90,7 @@
     	line-height: 50px;
     	width: 70%;
     	text-align: right;
+    	padding-right: 4%;
     }
     .xui-timeChoose{
     	display: none;
