--- a/weapp/mall/templates/mall/editor/orders_to_money.html
+++ b/weapp/mall/templates/mall/editor/orders_to_money.html
@@ -4,6 +4,11 @@
 
 {% block css %}
 <style type="text/css">
+.xui-mainPanel .xui-sideBar-orderMoney{
+    background-image: url('/static_v2/img/editor/moneyicon.png') !important;
+	left: 14px !important;
+	width: 20px !important;
+}
 </style>
 {% endblock %}
 
