--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -156,8 +156,8 @@
 	<div class="xui-time xa-time">
 		<div class="xui-filter-time">筛选时间</div>
 		<div class="xui-time-wrap xa-time-wrap">
-	 		{% if startDate and endDate %}
-	 			<span>{{startDate}}&nbsp;-&nbsp;{{endDate}}</span>
+	 		{% if startDateTitle and endDateTitle %}
+	 			<span>{{startDateTitle}}&nbsp;-&nbsp;{{endDateTitle}}</span>
  			{% else %}
 	 			<span>全部</span>
  			{% endif %}
