--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -183,7 +183,7 @@
         <div class="xui-section xui-production-panel pt0 xa-production" style="border:0;">
             <div class="xui-section-title xui-section-item zoom">
                 <div class="wui-i-product-description-title pt10">滑动查看详情</div>
-                <div class="xui-productDetail-content rawHtml pt10 pl10 pb10 xa-productDetail-content none">
+                <div class="xui-productDetail-content rawHtml p10 xa-productDetail-content none">
                 {{ product_detail|safe }}
                 </div>
             </div>
